# GenshinArtificer

./: Cargo.toml
json/: artifacts.json
src/: main.rs
