[package]
name = "Artificer"
version = "0.1.0"
authors = ["tylus9086 <tylus9086@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
num-derive = "0.3.3"
num-traits = "0.2.14"
num = "0.4.0"
anyhow = "1.0.40"